# linear-regression

./: README.md  global_space_launches.csv  global_space_launches_with_energiya.csv  pyproject.toml  regression.ipynb
